[metadata]
name = trafficbench
version = attr: trafficbench.__version__
author = Carsten Herrmann, Ingmar Splitt
author_email = carsten.herrmann@tu-dresden.de
maintainer_email = ingmar.splitt@tu-dresden.de
#license = file: LICENSE
url = https://pypi.org/project/trafficbench/
project_urls =
    Tracker = https://github.com/orgua/trafficbench/issues
    Source = https://github.com/orgua/trafficbench
description = a tool suite for the experimental exploration of concurrent packet transmissions and their consequences (physical layer effects) in low-power wireless networks
long_description = file: README.md
long_description_content_type = text/markdown
keywords = concurrent transmission, physical layer, low-power, wireless, rssi, scheduling, synchronization
platforms = unix, linux, osx, cygwin, win32, win64
classifiers =

    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Natural Language :: English

[options]
packages = find:
package_dir =
    =.
zip_safe = True
include_package_data = True
python_requires = >= 3.7
install_requires =
    numpy
    tables
    cbor2
    crcmod
    # crc # <- alternative
    chromalog
    pyserial
    typer[all]


[options.extras_require]
glue =
    glue-core
    glueviz
    matplotlib

lognplot =
    lognplot

dev =
    black
    pylint
    flake8
    twine
    pre-commit
    pyright

test =
    pytest
    coverage

[options.entry_points]
console_scripts =
    trafficbench = trafficbench.cli:app

[options.packages.find]
where=.

[options.package_data]
* = README.md,*.yaml

[aliases]
test=pytest

[tool:pytest]
# opts: verbose result for each tests
addopts = -vvv
